# tfa

./: .gitignore  README.md  docker-compose.yml
apps/api/: Caddyfile  Dockerfile  main.py  pyproject.toml  requirements.txt  vercel.json
apps/api/app/config/: __init__.py
apps/api/app/controllers/: __init__.py
apps/api/app/controllers/anime/: anime_controller.py  validator.py
apps/api/app/controllers/auth_token/: auth_token_controller.py
apps/api/app/controllers/request_change/: request_change_controller.py  validator.py
apps/api/app/controllers/user/: user_controller.py
apps/api/app/data/: __init__.py
apps/api/app/data/anime/: __init__.py  load_animes.py  load_from_files.py
apps/api/app/data/data/: __init__.py  load_source_data.py
apps/api/app/data/media_type/: __init__.py  load_media_types.py
apps/api/app/data/permission/: __init__.py  load_permissions.py
apps/api/app/data/role/: __init__.py  load_roles.py
apps/api/app/data/size_type/: __init__.py  load_size_types.py
apps/api/app/data/user/: __init__.py  load_users.py
apps/api/app/database/: base_class.py  mixins.py  redis_client.py  session.py  utils.py
apps/api/app/database/models/: __init__.py
apps/api/app/dto/: __init__.py  user_dto.py
apps/api/app/models/: __init__.py
apps/api/app/queries/: teste.py
apps/api/app/services/: router.py  schema.py
apps/api/app/utils/: enums.py  recreate_db.py  redis_cache.py  string.py  string_utils.py
apps/api/stuff/: generate_anime_file_data.py  testing.py  testing_mal_api.py
apps/api/tests/: __init__.py  conftest.py  utils.py
(+115 files in other folders)
